clean up docker

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,19 +2,15 @@ FROM node:16.13.2
 
 LABEL version="1.0"
 LABEL description="This is the base docker image for the Plan My Hikes backend API."
-# dev only 
-RUN npm install -g nodemon
 
 WORKDIR /app
 
 COPY ["package.json", "package-lock.json", "./"]
 RUN ls
-# RUN npm install --production
-RUN npm install
+RUN npm install --production
 
 COPY . .
 
 EXPOSE 5000
 
-CMD ["npm", "run", "dev"]
-# CMD ["node", "server.js"]
+CMD ["node", "server.js"]
