--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,9 @@
   },
   "homepage": "https://github.com/MARQUEZ93/plan-my-hikes#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "pg": "^8.10.0"
   }
 }
