--- a/client/public/manifest.json
+++ b/client/public/manifest.json
@@ -3,7 +3,7 @@
   "name": "Plan My Hikes",
   "icons": [
     {
-      "src": "fav.png",
+      "src": "fav.ico",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     }
