--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-ga": "^3.3.1",
     "react-intersection-observer": "^9.4.3",
     "react-router-dom": "^6.8.2",
     "react-scripts": "4.0.3",
