make progress w/ Docker + rename gem to hidden_gem pg column

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,18 @@ version: '3'
 
 services:
   db:
-    image: postgres
+    image: postgres:15
+    restart: always
     environment:
       POSTGRES_USER: admin
       POSTGRES_PASSWORD: password
       POSTGRES_DB: pmh
+    volumes:
+      - ./pgdata:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
   backend:
+    restart: always
     build:
       context: ./backend
       dockerfile: ./Dockerfile
@@ -20,6 +26,7 @@ services:
     environment:
       - DATABASE_URL=postgres://admin:passsword@db:5432/pmh
   frontend:
+    restart: always
     build:
       context: ./client
       dockerfile: ./Dockerfile
@@ -28,3 +35,8 @@ services:
       - "3000:3000"
     links:
       - "backend"
+    environment:
+      NODE_ENV: production
+      REACT_APP_API_URL: http://web:3000
+volumes:
+  dbdata:
