--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,17 @@ services:
       - "3000:3000"
     depends_on:
       - backend
-    environment: 
-      API_HOST: http://localhost:8080
+    environment:
+      API_HOST: /api
+  nginx:
+    restart: always
+    image: nginx:latest
+    ports:
+      - "81:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - backend
+      - client 
 volumes:
   db-data:
