--- a/nginx.conf
+++ b/nginx.conf
@@ -15,15 +15,23 @@ http {
     server backend:8080;
   }
 
+  map $http_upgrade $connection_upgrade {
+    default upgrade;
+    ''      close;
+  }
+
   server {
     listen 80;
 
-    location /api {
-      proxy_pass http://backend;
-    }
-
     location / {
       proxy_pass http://client:3000;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+    }
+
+    location /api {
+      proxy_pass http://backend;
     }
   }
 }
