--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,7 +18,7 @@ services:
     restart: always
     build:
       context: ./backend
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "8080:8080"
     depends_on:
@@ -34,7 +34,7 @@ services:
     restart: always
     build:
       context: ./client
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.dev
     ports:
       - "3000:3000"
     depends_on:
@@ -43,13 +43,10 @@ services:
       API_HOST: /api
   nginx:
     restart: always
-    image: nginx:latest
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile.dev
     ports:
       - "81:80"
-    volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - backend
-      - client 
 volumes:
   db-data:
