--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,7 +20,7 @@ services:
       context: ./backend
       dockerfile: Dockerfile.dev
     ports:
-      - "8080:8080"
+      - "5000:5000"
     depends_on:
       - db
     environment:
@@ -29,7 +29,10 @@ services:
       DB_NAME: pmh
       DB_USER: admin
       DB_PASSWORD: password
-      PORT: 8080
+      PORT: 5000
+    volumes:
+      - /app/node_modules
+      - ./backend:/app
   client:
     restart: always
     build:
@@ -41,6 +44,9 @@ services:
       - backend
     environment:
       API_HOST: /api
+    volumes:
+      - /app/node_modules
+      - ./client:/app
   nginx:
     restart: always
     build:
