--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,47 +1,19 @@
-worker_processes 1;
-
-events {
-  worker_connections 1024;
+upstream backend {
+  server backend:5000;
 }
 
-http {
-  include /etc/nginx/mime.types;
-  default_type application/octet-stream;
+server {
+  listen 80;
 
-  sendfile on;
-  keepalive_timeout 300s;
-
-  upstream backend {
-    server backend:8080;
+  location / {
+    proxy_pass http://client:3000;
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
   }
 
-  upstream client {
-    server client:3000;
-  }
-
-  map $http_upgrade $connection_upgrade {
-    default upgrade;
-    ''      close;
-  }
-
-  server {
-    listen 80;
-
-    location / {
-      proxy_pass http://client;
-    }
-
-    location /sockjs-node {
-      proxy_pass http://client;
-      proxy_http_version 1.1;
-      proxy_set_header Upgrade $http_upgrade;
-      proxy_set_header Connection "Upgrade";
-    }
-
-    location /api {
-      rewrite /api/(.*) /$1 break;
-      proxy_pass http://backend;
-    }
+  location /api {
+    proxy_pass http://backend;
   }
 }
 
