--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,34 +2,20 @@
 version: '3'
 
 services:
-  db:
-    image: postgres:14.7
-    restart: always
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: pmh
-    volumes:
-      - db-data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5432:5432"
   backend:
     restart: always
     build:
       context: ./backend
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
-    depends_on:
-      - db
     environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: pmh
-      DB_USER: admin
-      DB_PASSWORD: password
-      PORT: 5000
+      DB_HOST: $DB_HOST
+      DB_PORT: $DB_PORT
+      DB_NAME: $DB_NAME
+      DB_USER: $DB_USER
+      DB_PASSWORD: $DB_PASSWORD
+      PORT: $PORT
     volumes:
       - /app/node_modules
       - ./backend:/app
@@ -37,13 +23,13 @@ services:
     restart: always
     build:
       context: ./client
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
       - "3000:3000"
     depends_on:
       - backend
     environment:
-      API_HOST: /api
+      API_HOST: $API_HOST
     volumes:
       - /app/node_modules
       - ./client:/app
@@ -51,8 +37,6 @@ services:
     restart: always
     build:
       context: ./nginx
-      dockerfile: Dockerfile.dev
+      dockerfile: Dockerfile
     ports:
-      - "81:80"
-volumes:
-  db-data:
+      - "80:80"
