--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -44,6 +44,7 @@ services:
       - backend
     environment:
       API_HOST: /api
+      WDS_SOCKET_PORT: 0
     volumes:
       - /app/node_modules
       - ./client:/app
