--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -12,6 +12,13 @@ server {
     proxy_set_header Connection "Upgrade";
   }
 
+  location /ws {
+      proxy_pass http://client:3000;
+      proxy_http_version 1.1;
+      proxy_set_header Upgrade $http_upgrade;
+      proxy_set_header Connection "Upgrade";
+  }
+
   location /api {
     proxy_pass http://backend;
   }
