--- a/client/.dockerignore
+++ b/client/.dockerignore
@@ -21,3 +21,35 @@ app/client/build
 # Ignore files and directories in the backend directory
 app/backend/node_modules
 app/backend/dist
+
+Dockerfile
+/backend/.env
+# local env files
+/client/.env.local
+/client/.env.development.local
+/client/.env.test.local
+/client/.env.production.local
+/client/.env
+/client/package-lock.json
+
+# debug
+/client/npm-debug.log*
+/client/yarn-debug.log*
+/client/yarn-error.log*
+
+# misc
+/client/.DS_Store
+
+/backend/node_modules
+/backend/.env
+/backend/dist
+/backend/package-lock.json
+
+# dependencies
+/client/node_modules
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
+
