--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -6,7 +6,7 @@ server {
   listen 80;
 
   location / {
-    proxy_pass http://client:3000;
+    proxy_pass https://client:3000;
   }
 
   location /ws {
