--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,8 +5,12 @@ upstream backend {
 server {
   listen 80;
 
+  server_name _;
+
+  return 301 https://$host$request_uri;
+
   location / {
-    proxy_pass https://client:3000;
+    proxy_pass http://client:3000;
   }
 
   location /ws {
