--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -5,6 +5,11 @@ upstream backend {
 server {
   listen 80;
 
+  server_name _;
+  if ($http_x_forwarded_proto = 'http'){
+    return 301 https://$host$request_uri;
+  }
+
   location / {
     proxy_pass http://client:3000;
   }
