--- a/backend/package.json
+++ b/backend/package.json
@@ -21,7 +21,6 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "lodash": "^4.17.21",
-    "openai": "^3.2.1",
-    "pg": "^8.10.0"
+    "openai": "^3.2.1"
   }
 }
