--- a/docker-compose-dev.yml
+++ b/docker-compose-dev.yml
@@ -2,18 +2,18 @@
 version: '3'
 
 services:
-  db:
-    image: postgres:14.7
-    restart: always
-    environment:
-      POSTGRES_USER: admin
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: pmh
-    volumes:
-      - db-data:/var/lib/postgresql/data
-      - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
-    ports:
-      - "5432:5432"
+  # db:
+  #   image: postgres:14.7
+  #   restart: always
+  #   environment:
+  #     POSTGRES_USER: admin
+  #     POSTGRES_PASSWORD: password
+  #     POSTGRES_DB: pmh
+  #   volumes:
+  #     - db-data:/var/lib/postgresql/data
+  #     - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+  #   ports:
+  #     - "5432:5432"
   backend:
     restart: always
     build:
@@ -24,11 +24,11 @@ services:
     depends_on:
       - db
     environment:
-      DB_HOST: db
-      DB_PORT: 5432
-      DB_NAME: pmh
-      DB_USER: admin
-      DB_PASSWORD: password
+      # DB_HOST: db
+      # DB_PORT: 5432
+      # DB_NAME: pmh
+      # DB_USER: admin
+      # DB_PASSWORD: password
       PORT: 5000
     volumes:
       - /app/node_modules
@@ -55,5 +55,5 @@ services:
       dockerfile: Dockerfile.dev
     ports:
       - "81:80"
-volumes:
-  db-data:
+# volumes:
+#   db-data:
